--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,20 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_splash_screen: ^1.3.0
   barcode_widget: ^2.0.4
   cupertino_icons: ^1.0.8
-  get: ^4.3.8
+  dots_indicator: ^4.0.1
+  font_awesome_flutter: ^9.1.0
   flutter:
     sdk: flutter
-  animated_splash_screen: ^1.3.0
+  get: ^4.3.8
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
@@ -57,7 +53,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/Logos/
+    # - assets/images/Logos/
     - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
